--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,11 @@
         "laravel/folio": "^1.1",
         "laravel/framework": "^11.0",
         "laravel/pail": "^1.2",
+        "laravel/reverb": "^1.5",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.5",
         "livewire/livewire": "^3.0",
+        "namu/wirechat": "^0.2.10",
         "ralphjsmit/livewire-urls": "^1.4",
         "spatie/laravel-permission": "^6.4",
         "stripe/stripe-php": "^15.3",
