--- a/public/.htaccess
+++ b/public/.htaccess
@@ -19,3 +19,55 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule>
+
+# Configuration pour les uploads de fichiers
+<IfModule mod_php.c>
+    php_value upload_max_filesize 2M
+    php_value post_max_size 10M
+    php_value max_execution_time 300
+    php_value max_input_time 300
+    php_value memory_limit 256M
+</IfModule>
+
+# Configuration pour les uploads (Apache 2.4+)
+<IfModule mod_php8.c>
+    php_value upload_max_filesize 2M
+    php_value post_max_size 10M
+    php_value max_execution_time 300
+    php_value max_input_time 300
+    php_value memory_limit 256M
+</IfModule>
+
+# Forcer la configuration des uploads
+php_value upload_max_filesize 2M
+php_value post_max_size 10M
+php_value max_execution_time 300
+php_value max_input_time 300
+php_value memory_limit 256M
+
+# Configuration alternative pour Apache 2.4+
+<IfModule mod_php8.c>
+    php_value upload_max_filesize 2M
+    php_value post_max_size 10M
+    php_value max_execution_time 300
+    php_value max_input_time 300
+    php_value memory_limit 256M
+</IfModule>
+
+# Configuration pour les versions plus anciennes
+<IfModule mod_php5.c>
+    php_value upload_max_filesize 2M
+    php_value post_max_size 10M
+    php_value max_execution_time 300
+    php_value max_input_time 300
+    php_value memory_limit 256M
+</IfModule>
+
+# Configuration pour les versions plus récentes
+<IfModule mod_php81.c>
+    php_value upload_max_filesize 2M
+    php_value post_max_size 10M
+    php_value max_execution_time 300
+    php_value max_input_time 300
+    php_value memory_limit 256M
+</IfModule>
